RESOLVED FIXED215812
[Win] Assert failure under RunLoop::RunLoop
https://bugs.webkit.org/show_bug.cgi?id=215812
Summary [Win] Assert failure under RunLoop::RunLoop
Per Arne Vollan
Reported 2020-08-25 09:31:22 PDT
The assert ASSERT(::IsWindow(m_runLoopMessageWindow)) under RunLoop::RunLoop, has been observed to fail.
Attachments
Patch (1.19 KB, patch)
2020-08-25 09:32 PDT, Per Arne Vollan
no flags
Patch (2.05 KB, patch)
2020-08-25 10:15 PDT, Per Arne Vollan
no flags
Patch (3.26 KB, patch)
2020-08-25 11:57 PDT, Per Arne Vollan
no flags
Patch (3.35 KB, patch)
2020-08-25 12:32 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2020-08-25 09:32:41 PDT
Per Arne Vollan
Comment 2 2020-08-25 10:15:07 PDT
Per Arne Vollan
Comment 3 2020-08-25 11:57:15 PDT
Per Arne Vollan
Comment 4 2020-08-25 12:32:56 PDT
Per Arne Vollan
Comment 5 2020-08-25 12:33:27 PDT
Brent Fulgham
Comment 6 2020-08-25 12:50:46 PDT
Comment on attachment 407217 [details] Patch R=me
Per Arne Vollan
Comment 7 2020-08-25 12:52:43 PDT
(In reply to Brent Fulgham from comment #6) > Comment on attachment 407217 [details] > Patch > > R=me Thanks for reviewing!
EWS
Comment 8 2020-08-25 14:51:04 PDT
Committed r266145: <https://trac.webkit.org/changeset/266145> All reviewed patches have been landed. Closing bug and clearing flags on attachment 407217 [details].
Note You need to log in before you can comment on or make changes to this bug.